--- a/public/index.html
+++ b/public/index.html
@@ -44,5 +44,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      if ('service-worker' in navigator) {
+        navigator.serviceWorker
+          .register('./service_worker.js')
+          .then(() => console.log('서비스 워커 등록'));
+      }
+    </script>
   </body>
 </html>
